# Coleccion_de_Ejercicios_para_Nociones_Clave

./: CMakeLists.txt  Estudiante.cpp  Persona.cpp  Persona.h  README.md  main.cpp
Ejercicios 1 y 2/: Estudiante.h  Persona.h  main.cpp
Ejercicios 3, 4, 5, 6 y 7/: main.cpp
Ejercicios_1_2/: Estudiante.cpp  Persona.cpp
Ejercicios_3_7/: Funciones.cpp  Funciones.h  Matematicas.cpp  main.cpp  matematicas.cpp  matematicas.h
